# lonseal-cost-simulator

./: .gitignore  CLAUDE.md  app.py  pyproject.toml  requirements.txt
data/master/: item_overrides.csv  market_data_sources.csv  market_prices.csv  negotiations.csv  price_history.csv  products.csv  unified.csv
docs/: ai-extraction-guide.md  data-coverage.md  front.md  project-summary.md  requirements.md  参照URL.md
docs/screenshots/: README.md
scripts/: generate_unified_csv.py  prepare_unified_csv.py
src/simulator/: calc.py  config.py  data.py  ui.py
